# configure.ac --
#

AC_INIT([nausicaa-uriel],[0.1d0])
AC_PREREQ(2.60)
AC_CONFIG_SRCDIR([libraries/compile-all.sps])
NAUSICAA_BEGIN
NAUSICAA_SYSTEM_SETUP
NAUSICAA_C_LANGUAGE
NAUSICAA_SIZEOF
NAUSICAA_C_TYPES_LIMITS
NAUSICAA_C_ERRNO
AC_CONFIG_FILES([../libraries/uriel/ffi/sizeof.sls:libraries/uriel/ffi/sizeof.sls.in])
AC_CONFIG_FILES([../libraries/uriel/ffi/errno.sls:libraries/uriel/ffi/errno.sls.in])
NAUSICAA_END


### end of file
