# configure.ac --
#

AC_INIT([nausicaa-uriel],[0.1d0])
NAUSICAA_BEGIN
NAUSICAA_SYSTEM_SETUP
NAUSICAA_SCHEME_CHECK_LIBRARY([NAU_R6RS],[(r6rs)])
NAUSICAA_C_LANGUAGE
NAUSICAA_SIZEOF
NAUSICAA_C_TYPES_LIMITS
NAUSICAA_C_ERRNO
AC_CONFIG_FILES([../libraries/uriel/ffi/sizeof.sls:libraries/uriel/ffi/sizeof.sls.in])
AC_CONFIG_FILES([../libraries/uriel/errno.sls:libraries/uriel/errno.sls.in])
NAUSICAA_END


### end of file
